@@ -34,6 +34,7 @@ A demo-app can be installed from [Play Store](https://play.google.com/store/apps
 
 - create new folder on the fly, and the optional multiple select mode for developer, thx [Guiorgy](https://github.com/Guiorgy) and his [android-smbfile-chooser](https://github.com/Guiorgy/android-smbfile-chooser)
 - Up (`..`) on the primary storage root will be replaced with `.. SDCard`, it allows to jump to external storage such as a SDCard and going back available too.
+- DPad supports, arrow keys supports (#30)
 - ...
 
 
